@@ -909,6 +909,8 @@ class TestArray < Test::Unit::TestCase
     a3 = @cls[ 'dog', 'cat' ]
     assert_equal(a1.hash, a2.hash)
     assert_not_equal(a1.hash, a3.hash)
+    bug9231 = '[ruby-core:58993] [Bug #9231]'
+    assert_not_equal(false.hash, @cls[].hash, bug9231)
   end
 
   def test_include?
